# british-invoice-digitization

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  production.yaml  prometheus.yml
docs/: ARCHITECTURE.md
notebooks/: 01_train_yolov5_invoices.ipynb
src/: __init__.py  app.py  inference.py
src/api/: __init__.py  main.py  middleware.py  routes.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  detector.py  digitizer.py  model_manager.py
src/schemas/: __init__.py  detection.py  request.py  response.py
src/utils/: __init__.py  visualization.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_schemas.py
